# taut

./: .pre-commit-config.yaml  CNAME  Cargo.toml  README.md  build.rs  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml  pages.yml
benches/: compare_execution.py  compare_pytest.py  integration.rs
benches/fixtures/: mod.rs
docs/: CHANGELOG.md  first principles.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: configuration.md  markers.md  writing-tests.md
docs/overrides/: main.html
docs/overrides/styles/: catppuccin-orange.css
docs/reference/: cli.md
python/taut/: __init__.py
src/: blocks.rs  cache.rs  cli.rs  config.rs  depdb.rs  discovery.rs  filter.rs  lib.rs  main.rs  markers.rs  output.rs  runner.rs  selection.rs  worker.py  worker_pool.rs
tests/: _test_async_example.py  discovery_rules.rs  helpers.rs  test_blocks.rs  test_cpu_intensive.py  test_depdb.rs  test_discovery.rs  test_example.py  test_failures.py  test_integration.rs  test_markers_example.py  test_slow.py  test_worker.rs
