[package]
name = "taut"
version = "0.1.0"
edition = "2024"
description = "Tests, without the overhead."
license = "MIT"
readme = "README.md"

[lib]
name = "taut"

[[bin]]
name = "taut"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rustpython-parser = "0.4"
rayon = "1.10"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
sha2 = "0.10"
dirs = "5"
notify = "6"

[dev-dependencies]
tempfile = "3"
