[package]
name = "taut"
version = "0.1.0"
edition = "2024"
description = "Tests, without the overhead."
license = "MIT"
readme = "README.md"
build = "build.rs"

[lib]
name = "taut"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "taut"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1"
rustpython-parser = "0.4"
rayon = "1.10"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.1"
anyhow = "1"
crossbeam-channel = "0.5"
colored = "3"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
dirs = "6.0.0"
notify = "8.2.0"
regex = "1"
toml = "0.8"
num-traits = "0.2.19"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "integration"
harness = false

[features]
default = []
extension-module = ["pyo3/extension-module"]
