[project]
name = "taut"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Prodgramming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

authors = [
    {email = "git@jsn.cam"},
    {name = "Jason Cameron"}
]


[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

