[project]
name = "taut"
requires-python = ">=3.12,<3.14"
keywords = ["python", "testing", "test-runner", "performance", "parallel", "cli", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
]
authors = [
    { name = "Jason Cameron", email = "git@jsn.cam" }
]
dynamic = ["version", "description", "readme"]

[project.scripts]
taut = "taut:main"

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "taut._taut"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]

[tool.taut]
max_workers = 8
